# doukaku

e21/: README.md  Rakefile
e21/hs/: README.md  e21.cabal  stack.yaml
e21/hs/app/: Main.hs
e21/hs/src/: E21.hs  Model.hs  Reader.hs  Solver.hs
e21/hs/test/: Spec.hs
e23/: e23.cabal  package.yaml
e23/src/: Main.hs
e29/: README.md  package.yaml  solve.rb
e29/src/: Main.hs
