name:                e21
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/kayhide/e21#readme
license:             BSD3
license-file:        LICENSE
author:              kayhide
maintainer:          kayhide@gmail.com
copyright:           2018 kayhide
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/kayhide/e21#readme>

library
  hs-source-dirs:      src
  exposed-modules:     E21
                     , Model
                     , Solver
                     , Reader
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , vector
                     , unordered-containers
                     , attoparsec
                     , aeson
                     , aeson-pretty
                     , lens
                     , lens-aeson
                     , errors
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DefaultSignatures
                     , DeriveFunctor
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , OverloadedLists
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeOperators

executable e21
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , bytestring
                     , e21
  default-language:    Haskell2010

test-suite e21-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , vector
                     , unordered-containers
                     , aeson
                     , lens
                     , lens-aeson
                     , e21
                     , HUnit
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DefaultSignatures
                     , DeriveFunctor
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeOperators

source-repository head
  type:     git
  location: https://github.com/kayhide/e21
